<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pico_description</name>
  <version>0.0.1</version>
  <description>pico_description</description>
  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
  <license>Apach License 2.0</license>

  <author email="aoki@rt-net.jp">Masatake Aoki</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>launch</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>rviz_common</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
